# onvif-metadata-collect-rs

./: .env  CHANGELOG.md  Cargo.toml  README.md
examples/client/: .env  Cargo.toml  __Cargo copy.toml  package-lock.json  package.json  test.js  worker.js
examples/client/src/: dkcalculation.rs  lib.rs  main.rs  metadata.rs
examples/client/src/original/: __main.rs  metadata.rs
examples/onvif-metadata-rs/: .env  Cargo.toml
examples/onvif-metadata-rs/src/: edge_metadata.rs  lpr.rs  main.rs  server_metadata.rs
src/: edge_metadata.rs  main.rs  server_metadata.rs  test.rs
src/bestshot_test/: edge_metadata.rs  main.rs
src/client/testdata/: anpviz_sdp.txt  bad_rtptime.txt  bunny_describe.txt  bunny_play.txt  bunny_setup.txt  dahua_describe_h264_aac_onvif.txt  dahua_describe_h265_pcma.txt  dahua_options.txt  dahua_play.txt  dahua_setup.txt  foscam_describe.txt  geovision_sdp.txt  gw_main_describe.txt  gw_main_play.txt  gw_main_setup_audio.txt  gw_main_setup_video.txt  gw_sub_describe.txt  gw_sub_play.txt  gw_sub_setup.txt  hikvision_describe.txt  hikvision_play.txt  hikvision_setup.txt  ipcam_describe.txt  macrovideo_describe.txt  reolink_describe.txt  reolink_play.txt  reolink_setup.txt  reolink_teardown.txt  tplink_sdp.txt  vstarcam_describe.txt
src/edge/: edge_metadata.rs  main.rs
src/original/: lib.rs
src/server/: fclt.rs  main.rs  util.rs
src/server/server_metadata/: bestshot.rs  facerecognition.rs  fclt.rs  hanwha.rs  lpr.rs  metadata.rs  mod.rs  request.rs  truen.rs
src/server_metadata/: lpr.rs  mod.rs  request.rs
