[package]
name = "onvif-metadata-rs"
version = "0.0.1"
description = "onvif-metadata-rs"
edition = "2021"

[dependencies]
bytes = "1.0.1"
futures = "0.3.14"
log = "0.4.8"
retina = "0.4.5"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
url = "2.2.1"
anyhow = "1.0.41"
structopt = "0.3.21"
actix-web = "4"
lazy_static = "1.4.0"
async-trait = "0.1.57"
dotenv = "0.15.0"
quickxml_to_serde = "0.5.0"
chrono = "0.4.22"
serde_json = "1.0.94"
serde = "1.0.154"
reqwest = { version = "0.11.16", features = ["stream","multipart", "json", "blocking"] }
libloading = "0.7.3"
image = "0.24.5"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "errhandlingapi",
    "libloaderapi",
]


[dependencies.mongodb]
version = "2.3.1"
features = ["tokio-sync"]

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "edge"
path = "src/edge/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"