[package]
name = "client"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.59"

[dependencies]
bytes = "1.0.1"
futures = "0.3.14"
log = "0.4.8"
retina = { path = "../../" }
tokio = { version = "1.5.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
url = "2.2.1"
anyhow = "1.0.41"
itertools = "0.10.1"
mylog = { git = "https://github.com/scottlamb/mylog" }
structopt = "0.3.21"
actix-web = "4"
lazy_static = "1.4.0"
derivative = "2.2.0"
async-trait = "0.1.57"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]