[package]
name = "onvif-metadata-rs"
version = "0.1.0"
description = "onvif-metadata-rs"
license = "MIT"
edition = "2018"
exclude = ["index.node"]


[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.0.1"
futures = "0.3.14"
log = "0.4.8"
retina = { path = "../../" }
tokio = { version = "1.21.2", features = ["full"] }
url = "2.2.1"
anyhow = "1.0.41"
itertools = "0.10.1"
mylog = { git = "https://github.com/scottlamb/mylog" }
structopt = "0.3.21"
actix-web = "4"
lazy_static = "1.4.0"
derivative = "2.2.0"
async-trait = "0.1.57"
dotenv = "0.15.0"
quickxml_to_serde = "0.5.0"
chrono = "0.4.22"
serde_json = "1.0.87"

[dependencies.neon]
version = "1.0.0-alpha.1"
features = ["futures", "napi-experimental"]

[dependencies.mongodb]
version = "2.3.1"
features = ["tokio-sync"]

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]